[build-system]
requires = ['setuptools', 'wheel', 'poetry']

[tool.poetry]
name = "brujeria"
version = "0.1.0"
description = "Build native extensions on import or ahead of time"
authors = ["Isabella Muerte <63051+slurps-mad-rips@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/slurps-mad-rips"
keywords = ["cmake", "ninja", "build-systems", "c++"]
packages = [{ include = "brujeria" }]
include = [
  "CODE_OF_CONDUCT.md",
  "CONTRIBUTING.md",
  "SUPPORT.md",
  "tests/",
  "docs/"
]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: BSD",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry.dependencies]
python = "3.7"
cmake = "^3.13"
ninja = "^1.9"
logbook = "^1.4"
importlib_resources = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^4.5"
pytest-runner = "^5.1"
pylint = "^2.3"
sphinx = "^2.0"
towncrier = "^19.2"
codecov = "^2.0"
coverage = "^4.5"
pytest-logbook = "^1.2"


[tools.poetry.plugins."distutils.commands"]
build_cmake_ext = "brujeria.command:CMakeCommand"
