[build-system]
requires = ['poetry>=0.12', 'pip', 'setuptools']

[tool.poetry]
name = "brujeria"
version = "0.1.0"
description = "Build native extensions on import or ahead of time"
authors = ["Isabella Muerte <63051+slurps-mad-rips@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/slurps-mad-rips/brujeria"
keywords = ["cmake", "ninja", "build-systems", "c++"]
include = [
  "CODE_OF_CONDUCT.md",
  "CONTRIBUTING.md",
  "SUPPORT.md",
  "tests/",
  "docs/"
]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: BSD",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry.dependencies]
python = "^3.7"
cmake = "^3.17"
ninja = "^1.10"
importlib-resources = "^2.0"
loguru = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest-runner = "^5.2"
pytest-cov = "^2.9"
pytest = "^5.4"
black = { version = "^19.10b0", allows-prereleases = true }
codecov = "^2.1"
flake8 = "^3.8"


[tools.poetry.plugins."distutils.commands"]
build_cmake_ext = "brujeria.command:CMakeCommand"
