[metadata]
name = brujeria
version = 0.1
description = Build native (C or C++) extensions on import
author_email = nope@example.com
author = Isabella Muerte
url = https://github.com/slurps-mad-rips/brujeria
license = BSD

[options]
zip_safe = True
packages = find:
install_requires =
  colorama
  logbook
  ninja
  mako

tests_require =
  pytest-datadir
  pytest-logbook
  pytest-runner
  pytest
  mako
  
[options.package_data]
brujeria = data/*.in

[aliases]
test = pytest
clean_egg_info = egg_info -Db ''
source = clean_egg_info sdist

[tool:pytest]
#addopts = -s