[metadata]
name = brujeria
version = 0.1
description = Build native (C or C++) extensions on import
long_description_content_type = text/x-rst
long_description = file: Readme.rst
author_email = 
platforms = any
license = BSD
author = Isabella Muerte
url = https://github.com/slurps-mad-rips/brujeria
classifiers =
  Intended Audience :: Developers
  Operating System :: POSIX
  Operating System :: POSIX :: BSD
  Operating System :: POSIX :: Linux
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Topic :: Software Development :: Build Tools
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: Implementation :: CPython

[options]
include_package_data=True
zip_safe = True
packages = find:
install_requires =
  colorama;sys_platform=='win32'
  logbook
  ninja
  mako
tests_require =
  pytest-datadir
  pytest-logbook
  pytest-runner
  pytest
  mako

[options.entry_points]
distutils.commands =
  build_ninja_clib=brujeria.command:BuildNinjaLib
  build_ninja_ext=brujeria.command:BuildNinjaExt
  execute=brujeria.command:ExecuteCommand
  shell=brujeria.command:ShellCommand
  purge=brujeria.command:PurgeCommand
  help=brujeria.command:HelpCommand

[aliases]
clean_egg_info = egg_info -Db ''
source = clean_egg_info sdist --formats=zip,gztar
clean = clean --all
wheel = bdist_wheel
test = pytest
docs = build_sphinx
dist = purge build source wheel
twine = execute --command=twine --args='upload --help'

[build_sphinx]
project = Brujería
version = 0.1
release = 0.1.0
source-dir = docs
build-dir = build
builder = html

[tool:pytest]
#addopts = -s