[metadata]
name = brujeria
version = 0.1
description = Build native (C or C++) extensions on import
long_description_content_type = text/x-rst
long_description = file: Readme.rst
author_email = 
platforms = any
license = MIT
author = Isabella Muerte
url = https://github.com/slurps-mad-rips/brujeria

[options]
include_package_data=True
zip_safe = True
packages = find:
package_dir =
  = src
install_requires =
  colorama;sys_platform=='win32'
  logbook
  cmake
  ninja

[options.packages.find]
where = src

[options.entry_points]
distutils.commands =
  build_cmake_ext=brujeria.command:CMakeCommand
  execute=brujeria.command:ExecuteCommand
  shell=brujeria.command:ShellCommand
  purge=brujeria.command:PurgeCommand
  help=brujeria.command:HelpCommand

[aliases]
clean_egg_info = egg_info -Db ''
source = clean_egg_info sdist --formats=zip,gztar
clean = clean --all
wheel = bdist_wheel
test = pytest
docs = build_sphinx
dist = purge build source wheel
twine = execute --command=twine --args='upload --help'

[build_sphinx]
project = Brujeria
version = 0.1
release = 0.1.0
source-dir = docs
build-dir = build
builder = html

[tool:pytest]
addopts = 
